Fixed overlay bug on mobile (inset)

--- a/main.css
+++ b/main.css
@@ -276,7 +276,10 @@ p,
 .header__overlay {
   opacity: 1;
   position: fixed;
-  inset: 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   background-image: linear-gradient(#2d314d, transparent);
 }
 
